--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6E8AA58141355BF85B1669976FE1FFDA
 ProjectName=Third Person Game Template
+CopyrightNotice=Copyright 2025 Century Egg Studios, All rights reserved
+CompanyName=Century Egg Studios
+
