--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -16,6 +17,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="Preparations.Hydrate",NewTagName="Prep.Hydrate")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Dish.ChiFan",DevComment="")
 +GameplayTagList=(Tag="Dish.Congee",DevComment="")
 +GameplayTagList=(Tag="Ingredient.BBQDuck",DevComment="")
 +GameplayTagList=(Tag="Ingredient.CenturyEgg",DevComment="")
