change maps and set default

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Maps/L_Main_Menu.L_Main_Menu
+EditorStartupMap=/Game/Maps/L_InternalPrototype.L_InternalPrototype
 GlobalDefaultGameMode="/Script/ProjectUmeowmi.ProjectUmeowmiGameMode"
 
 [/Script/Engine.RendererSettings]
