getting drag and drop to work in new prep

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -28,9 +27,14 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ingredient.Kimchi",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Peanuts",DevComment="")
 +GameplayTagList=(Tag="Ingredient.PorkFloss",DevComment="")
++GameplayTagList=(Tag="Ingredient.Salt",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Seaweed",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Shrimp",DevComment="")
++GameplayTagList=(Tag="Ingredient.SoySauce",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Squid",DevComment="")
++GameplayTagList=(Tag="Ingredient.Strawberry",DevComment="")
++GameplayTagList=(Tag="Ingredient.Sugar",DevComment="")
++GameplayTagList=(Tag="Ingredient.Vinegar",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Water",DevComment="")
 +GameplayTagList=(Tag="Prep",DevComment="")
 +GameplayTagList=(Tag="Prep.Bake",DevComment="")
