--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,8 +81,8 @@ r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=False
 r.Deferred.SupportPrimitiveAlphaHoldout=False
 r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=True
-r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.AutoExposure.Bias=1.000000
@@ -92,7 +92,7 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.800000
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=True
-r.AntiAliasingMethod=0
+r.AntiAliasingMethod=4
 r.MSAACount=4
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
