simplify gameplay tags

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="Preparations.Boil",NewTagName="Prep.Boil")
 +GameplayTagRedirects=(OldTagName="Preparations.Dehydrate",NewTagName="Prep.Dehydrate")
 +GameplayTagRedirects=(OldTagName="Preparations.Hydrate",NewTagName="Prep.Hydrate")
++GameplayTagRedirects=(OldTagName="Prep.Time.Med",NewTagName="Prep.Time.Medium")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Dish.ChiFan",DevComment="")
@@ -37,17 +38,17 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ingredient.Vinegar",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Water",DevComment="")
 +GameplayTagList=(Tag="Prep",DevComment="")
-+GameplayTagList=(Tag="Prep.Bake",DevComment="")
-+GameplayTagList=(Tag="Prep.Boil",DevComment="")
-+GameplayTagList=(Tag="Prep.Char",DevComment="")
-+GameplayTagList=(Tag="Prep.Dehydrate",DevComment="")
-+GameplayTagList=(Tag="Prep.Ferment",DevComment="")
-+GameplayTagList=(Tag="Prep.Freeze",DevComment="")
-+GameplayTagList=(Tag="Prep.Hydrate",DevComment="")
-+GameplayTagList=(Tag="Prep.Marinated",DevComment="")
++GameplayTagList=(Tag="Prep.Chop",DevComment="")
 +GameplayTagList=(Tag="Prep.Mince",DevComment="")
-+GameplayTagList=(Tag="Prep.Pickle",DevComment="")
-+GameplayTagList=(Tag="Prep.Roast",DevComment="")
++GameplayTagList=(Tag="Prep.Puree",DevComment="")
++GameplayTagList=(Tag="Prep.Temp",DevComment="")
++GameplayTagList=(Tag="Prep.Temp.Hot",DevComment="")
++GameplayTagList=(Tag="Prep.Temp.Low",DevComment="")
++GameplayTagList=(Tag="Prep.Temp.Med",DevComment="")
++GameplayTagList=(Tag="Prep.Time",DevComment="")
++GameplayTagList=(Tag="Prep.Time.Long",DevComment="")
++GameplayTagList=(Tag="Prep.Time.Medium",DevComment="")
++GameplayTagList=(Tag="Prep.Time.Short",DevComment="")
 +GameplayTagList=(Tag="Profile.Flavor",DevComment="")
 +GameplayTagList=(Tag="Profile.Texture",DevComment="")
 
