--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -20,6 +21,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Dish.ChiFan",DevComment="")
 +GameplayTagList=(Tag="Dish.Congee",DevComment="")
 +GameplayTagList=(Tag="Dish.HaloHalo",DevComment="")
++GameplayTagList=(Tag="Ingredient.BabyAnchovy",DevComment="")
 +GameplayTagList=(Tag="Ingredient.BBQDuck",DevComment="")
 +GameplayTagList=(Tag="Ingredient.CenturyEgg",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Cilantro",DevComment="")
