finally fix radial menu to functionality

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -79,6 +79,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Prep.Time.Long",DevComment="")
 +GameplayTagList=(Tag="Prep.Time.Medium",DevComment="")
 +GameplayTagList=(Tag="Prep.Time.Short",DevComment="")
++GameplayTagList=(Tag="Action",DevComment="")
++GameplayTagList=(Tag="Action.Remove",DevComment="")
++GameplayTagList=(Tag="Action.ClearPreparations",DevComment="")
 +GameplayTagList=(Tag="Profile.Flavor",DevComment="")
 +GameplayTagList=(Tag="Profile.Texture",DevComment="")
 
