--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -17,6 +18,9 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="Prep.Time.Med",NewTagName="Prep.Time.Medium")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Action",DevComment="")
++GameplayTagList=(Tag="Action.ClearPreparations",DevComment="")
++GameplayTagList=(Tag="Action.Remove",DevComment="")
 +GameplayTagList=(Tag="Dish.BiloBilo",DevComment="")
 +GameplayTagList=(Tag="Dish.ChiFan",DevComment="")
 +GameplayTagList=(Tag="Dish.Congee",DevComment="")
@@ -34,6 +38,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ingredient.BabyAnchovy",DevComment="")
 +GameplayTagList=(Tag="Ingredient.BBQDuck",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Bread",DevComment="")
++GameplayTagList=(Tag="Ingredient.Butter",DevComment="")
 +GameplayTagList=(Tag="Ingredient.CenturyEgg",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Cilantro",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Coconut",DevComment="")
@@ -48,6 +53,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ingredient.Noodle.Egg",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Noodle.Glass",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Noodle.Shirataki",DevComment="")
++GameplayTagList=(Tag="Ingredient.Oil",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Peanuts",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Pepper",DevComment="")
 +GameplayTagList=(Tag="Ingredient.Pepper.Chili",DevComment="")
@@ -79,9 +85,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Prep.Time.Long",DevComment="")
 +GameplayTagList=(Tag="Prep.Time.Medium",DevComment="")
 +GameplayTagList=(Tag="Prep.Time.Short",DevComment="")
-+GameplayTagList=(Tag="Action",DevComment="")
-+GameplayTagList=(Tag="Action.Remove",DevComment="")
-+GameplayTagList=(Tag="Action.ClearPreparations",DevComment="")
 +GameplayTagList=(Tag="Profile.Flavor",DevComment="")
 +GameplayTagList=(Tag="Profile.Texture",DevComment="")
 
