disable ALL debugs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -232,6 +232,14 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="ProjectUmeowmiGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ProjectUmeowmiCharacter")
 
+; Global debug/onscreen message suppression. Re-enable or adjust as needed.
+bEnableOnScreenDebugMessages=False
+bEnableOnScreenDebugMessagesDisplay=False
+
+[Core.Log]
+; Suppress all LogTemp output by default (Fatal only). Adjust per-category as needed.
+LogTemp=Fatal
+
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
