--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/LuckyFatCatDiner/Maps/L_Main_Menu.L_Main_Menu
 EditorStartupMap=/Game/LuckyFatCatDiner/Maps/Debug/L_InternalPrototype.L_InternalPrototype
 GlobalDefaultGameMode="/Script/ProjectUmeowmi.ProjectUmeowmiGameMode"
+GameInstanceClass="/Script/ProjectUmeowmi.PUProjectUmeowmiGameInstance"
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
