pop up funcitonality

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameDefaultMap=/Game/LuckyFatCatDiner/Maps/L_Main_Menu.L_Main_Menu
 EditorStartupMap=/Game/LuckyFatCatDiner/Maps/Debug/L_InternalPrototype.L_InternalPrototype
 GlobalDefaultGameMode="/Script/ProjectUmeowmi.ProjectUmeowmiGameMode"
-GameInstanceClass="/Script/ProjectUmeowmi.PUProjectUmeowmiGameInstance"
+GameInstanceClass=/Game/LuckyFatCatDiner/Core/Blueprints/BP_LFCDGameInstance.BP_LFCDGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
