add more journal functionality

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -234,12 +234,12 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ProjectUmeowmiCharacter")
 
 ; Global debug/onscreen message suppression. Re-enable or adjust as needed.
-bEnableOnScreenDebugMessages=False
-bEnableOnScreenDebugMessagesDisplay=False
+bEnableOnScreenDebugMessages=True
+bEnableOnScreenDebugMessagesDisplay=True
 
 [Core.Log]
 ; Suppress all LogTemp output by default (Fatal only). Adjust per-category as needed.
-LogTemp=Fatal
+LogTemp=Log
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
