add in ingredient slices
note make sure to turn on cpu access

--- a/ProjectUmeowmi.uproject
+++ b/ProjectUmeowmi.uproject
@@ -31,6 +31,10 @@
 			"Name": "RadarChart",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/58ae23f808924ba9984f77dfcf567a65"
+		},
+		{
+			"Name": "GeometryScripting",
+			"Enabled": true
 		}
 	]
 }
